--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Aayush Wellness</title>
-      <link rel="icon" type="image/x-icon" href="https://cdn.shopify.com/s/files/1/0674/9614/9171/files/Aayush_Wellness_1-1-02.png?v=1724413838" />
+      <link rel="icon" type="image/x-icon" href="https://cdn.shopify.com/s/files/1/0653/9830/9053/files/WhatsApp_Image_2025-02-28_at_3.57.12_PM.jpg?v=1740743508" />
     
     <style>
       @media screen and (max-width:768px){
